--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,11 @@
 plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
+    id("io.github.gradle-nexus.publish-plugin") version "1.1.0"
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply from: "${rootDir}/scripts/publish-root.gradle"
