--- a/scripts/publish-module.gradle
+++ b/scripts/publish-module.gradle
@@ -68,10 +68,19 @@ afterEvaluate {
     }
 }
 
-ext["signing.keyId"] = rootProject.ext["signing.keyId"]
-ext["signing.password"] = rootProject.ext["signing.password"]
-ext["signing.secretKeyRingFile"] = rootProject.ext["signing.secretKeyRingFile"]
-
+//ext["signing.keyId"] = rootProject.ext["signing.keyId"]
+//ext["signing.password"] = rootProject.ext["signing.password"]
+////ext["signing.secretKeyRingFile"] = rootProject.ext["signing.secretKeyRingFile"]
+//ext["signing.key"] = rootProject.ext["signing.key"]
+//
+//signing {
+//    sign publishing.publications
+//}
 signing {
+    useInMemoryPgpKeys(
+            rootProject.ext["signing.keyId"],
+            rootProject.ext["signing.key"],
+            rootProject.ext["signing.password"],
+    )
     sign publishing.publications
 }
