--- a/scripts/publish-root.gradle
+++ b/scripts/publish-root.gradle
@@ -1,10 +1,11 @@
 // Create variables with empty default values
 ext["signing.keyId"] = ''
 ext["signing.password"] = ''
-ext["signing.secretKeyRingFile"] = ''
+//ext["signing.secretKeyRingFile"] = ''
 ext["ossrhUsername"] = ''
 ext["ossrhPassword"] = ''
 ext["sonatypeStagingProfileId"] = ''
+ext["signing.key"] = ''
 
 File secretPropsFile = project.rootProject.file('../../Keys/LibGPGKey/local.properties')
 if (secretPropsFile.exists()) {
@@ -19,7 +20,8 @@ if (secretPropsFile.exists()) {
     ext["sonatypeStagingProfileId"] = System.getenv('SONATYPE_STAGING_PROFILE_ID')
     ext["signing.keyId"] = System.getenv('SIGNING_KEY_ID')
     ext["signing.password"] = System.getenv('SIGNING_PASSWORD')
-    ext["signing.secretKeyRingFile"] = System.getenv('SIGNING_SECRET_KEY_RING_FILE')
+//    ext["signing.secretKeyRingFile"] = System.getenv('SIGNING_SECRET_KEY_RING_FILE')
+    ext["signing.key"] = System.getenv('SIGNING_KEY')
 }
 
 // Set up Sonatype repository
