--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,19 +12,18 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          distribution: adopt
-          java-version: 11
+          java-version: 1.8
 
         # Builds the release artifacts of the library
       - name: Release build
         run: ./gradlew :readmoretextview:assembleRelease
 
         # Generates other artifacts (javadocJar is optional)
-      - name: Source jar and dokka
-        run: ./gradlew androidSourcesJar javadocJar
+        # - name: Source jar and dokka
+        # run: ./gradlew androidSourcesJar javadocJar
 
         # Runs upload, and then closes & releases the repository
       - name: Publish to MavenCentral
