--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: Publish
 
 on:
-  release:
-    # We'll run this workflow when a new GitHub release is created
-    types: [released]
+  push:
+    tags:
+      - '*'
 
 jobs:
   publish:
